context/source-materials/legacy/changeswork-full/planning/mvp/versions/v6.0/tasks/mvp_tasks_pilot_detail_page.md
# Задачи для детальной страницы Пилота (Pilot Detail)

## Обзор страницы

**Страница:** Детальная пилота (Pilot Detail)
**Путь в макете:** Клик на пилот из списка → детальная страница
**Статус:** Адаптация существующей страницы

### Что показывает страница (из макета):

**Основная информация:**
- ID пилота (display_id)
- Название
- Статус (draft/requires_activation/active/requires_correction/completed)
- Внедрение (deployment)
- Продукт
- Связанные скоркарты (многие-ко-многим)
- Даты (создания, активации, завершения)
- Автор

**Новые блоки для MVP:**
- **Блок артефактов** - список прикрепленных файлов (документы, результаты)
- **Блок связанных сущностей** - связи с Симуляциями (источники) и Изменениями (через Скоркарты)

**Функционал:**
- Просмотр всех полей пилота
- Загрузка/удаление артефактов
- Просмотр связанных Симуляций (источники скоркарт)
- Просмотр связанных Изменений (через общие скоркарты)
- Переход к связанным сущностям (клик → детальная)
- Кнопки действий по жизненному циклу (если есть права)

**Права доступа:**
- ПРМ видит пилоты своего продукта
- Методолог видит все пилоты
- Админ видит все пилоты

---

## AN-PD1: Аналитика детальной страницы Пилота

**Тип:** Story
**Приоритет:** Высокий
**Оценка:** 1 день

### Summary
Детализация требований для адаптации детальной страницы Пилота с добавлением блоков артефактов и связанных сущностей

### Description

Провести аналитику для адаптации детальной страницы Пилота:

1. **Детализация бизнес-требований:**
   - Определить правила отображения артефактов
   - Уточнить логику связей через Скоркарты
   - Определить правила доступа к артефактам
   - Уточнить отображение источников скоркарт (Симуляции)
   - Определить кнопки действий по жизненному циклу

2. **Спецификация UI/UX:**
   - Дизайн блока артефактов (список, загрузка, удаление)
   - Дизайн блока связанных сущностей (Симуляции, Изменения)
   - Спецификация навигации к связанным сущностям
   - Дизайн кнопок действий (Отправить на согласование, Завершить)

3. **Спецификация API контракта:**
   - GET /api/pilots/{id}/ - детальная информация
   - GET /api/pilots/{id}/artifacts/ - список артефактов
   - POST /api/pilots/{id}/artifacts/ - загрузка артефакта
   - DELETE /api/pilots/{id}/artifacts/{artifact_id}/ - удаление артефакта
   - GET /api/pilots/{id}/related/ - связанные сущности

### Acceptance Criteria

- [ ] Бизнес-требования задокументированы
- [ ] API контракт задокументирован
- [ ] UI/UX спецификация готова
- [ ] Правила доступа определены
- [ ] Документ согласован с заказчиком

### Dependencies
Нет

### Deliverables
- Документ "Спецификация детальной страницы Пилота" (markdown/confluence)
- API контракт для артефактов и связанных сущностей

---

## BE-PD1: Backend для детальной страницы Пилота

**Тип:** Story
**Приоритет:** Высокий
**Оценка:** 4 дня

### Summary
Адаптация Backend для детальной страницы Пилота с добавлением артефактов и связанных сущностей

### Description

Адаптировать Backend для детальной страницы Пилота:

1. **API Endpoint: GET /api/pilots/{id}/**

   **Обновление ответа:**
   ```json
   {
     "id": "uuid",
     "display_id": "PLT-001",
     "name": "Пилот Premium Q1 2026",
     "status": "active",
     "deployment": {
       "id": "uuid",
       "display_id": "DEP-001",
       "name": "Оптимизация риск-стратегии Premium карт"
     },
     "product": {
       "id": "uuid",
       "name": "Кредитная карта Premium"
     },
     "scorecards": [
       {
         "id": "uuid",
         "display_id": "SC-001",
         "name": "Скоркарта Premium v2.0",
         "criticality": "high"
       }
     ],
     "created_at": "2026-03-01T10:00:00Z",
     "activated_at": "2026-03-06T10:00:00Z",
     "completed_at": null,
     "created_by": {
       "id": "uuid",
       "full_name": "Иванов Иван Иванович"
     },
     "artifacts_count": 5,
     "related_simulations_count": 2,
     "related_changes_count": 1
   }
   ```

2. **API Endpoint: GET /api/pilots/{id}/artifacts/**

   **Формат ответа:**
   ```json
   {
     "count": 5,
     "results": [
       {
         "id": "uuid",
         "filename": "pilot_results.xlsx",
         "file_size": 2048000,
         "uploaded_at": "2026-03-06T15:00:00Z",
         "uploaded_by": {
           "id": "uuid",
           "full_name": "Иванов Иван Иванович"
         }
       }
     ]
   }
   ```

3. **API Endpoint: POST /api/pilots/{id}/artifacts/**

   **Параметры запроса:**
   - `file` (multipart/form-data) - файл для загрузки

   **Бизнес-логика:**
   - Валидация: размер файла <= 50MB
   - Валидация: разрешенные форматы (pdf, xlsx, docx, txt, csv)
   - Сохранение в файловое хранилище
   - Создание записи Artifact

4. **API Endpoint: DELETE /api/pilots/{id}/artifacts/{artifact_id}/**

   **Бизнес-логика:**
   - Валидация: пользователь имеет право удалять (автор или админ)
   - Удаление файла из хранилища
   - Удаление записи Artifact

5. **API Endpoint: GET /api/pilots/{id}/related/**

   **Формат ответа:**
   ```json
   {
     "simulations": [
       {
         "id": "uuid",
         "display_id": "SIM-001",
         "name": "Симуляция оптимизации лимитов",
         "status": "completed",
         "via_scorecards": [
           {
             "id": "uuid",
             "display_id": "SC-001",
             "name": "Скоркарта Premium v2.0"
           }
         ]
       }
     ],
     "changes": [
       {
         "id": "uuid",
         "display_id": "CHG-001",
         "name": "Внедрение новой скоркарты Premium",
         "status": "approved",
         "via_scorecards": [
           {
             "id": "uuid",
             "display_id": "SC-001",
             "name": "Скоркарта Premium v2.0"
           }
         ]
       }
     ]
   }
   ```

6. **Права доступа:**
   - Просмотреть может: ПРМ (свой продукт), Методолог, Админ
   - Загрузить артефакт может: ПРМ (свой продукт), Методолог, Админ
   - Удалить артефакт может: автор артефакта, Админ

### Acceptance Criteria

- [ ] GET /api/pilots/{id}/ обновлен
- [ ] GET /api/pilots/{id}/artifacts/ реализован
- [ ] POST /api/pilots/{id}/artifacts/ реализован
- [ ] DELETE /api/pilots/{id}/artifacts/{artifact_id}/ реализован
- [ ] GET /api/pilots/{id}/related/ реализован
- [ ] Валидация файлов работает
- [ ] Права доступа реализованы
- [ ] Unit тесты покрывают все сценарии (coverage > 80%)
- [ ] API документация обновлена

### Dependencies
- AN-PD1 (требуется спецификация)

---

## FE-PD1: Frontend для детальной страницы Пилота

**Тип:** Story
**Приоритет:** Высокий
**Оценка:** 5 дней

### Summary
Адаптация UI детальной страницы Пилота с добавлением блоков артефактов и связанных сущностей

### Description

Адаптировать Frontend для детальной страницы Пилота:

1. **Компонент PilotDetailView:**
   - Отображение основной информации пилота
   - Блок связанных скоркарт
   - Блок артефактов
   - Блок связанных сущностей
   - Кнопки действий по жизненному циклу
   - Responsive дизайн

2. **Основная информация:**
   - ID пилота (display_id)
   - Название
   - Статус (бейдж с цветом)
   - Внедрение (кликабельная ссылка)
   - Продукт
   - Даты (создания, активации, завершения)
   - Автор

3. **Блок связанных скоркарт:**
   - Заголовок "Скоркарты (N)"
   - Список скоркарт:
     - ID, название, критичность
     - Клик → переход к детальной скоркарты
   - EntityScorecardBlock компонент

4. **Блок артефактов:**
   - Заголовок "Артефакты (N)"
   - Список файлов:
     - Иконка типа файла
     - Название файла (кликабельное для скачивания)
     - Размер файла
     - Дата загрузки
     - Автор загрузки
     - Кнопка "Удалить" (если есть права)
   - Кнопка "Загрузить файл" (если есть права)
   - Drag & drop зона для загрузки
   - Валидация: размер <= 50MB, форматы (pdf, xlsx, docx, txt, csv)
   - Progress bar при загрузке
   - Empty state если нет артефактов

5. **Блок связанных сущностей:**
   - Заголовок "Связанные сущности"
   - Секция "Симуляции (N)" - источники скоркарт:
     - Список симуляций
     - ID, название, статус
     - "через скоркарты: SC-001, SC-002"
     - Клик → переход к детальной симуляции
   - Секция "Изменения (N)" - через общие скоркарты:
     - Список изменений
     - ID, название, статус
     - "через скоркарты: SC-001, SC-002"
     - Клик → переход к детальной изменения
   - Empty state если нет связей

6. **Кнопки действий по жизненному циклу:**
   - "Отправить на согласование" (если status = requires_activation или requires_correction)
   - "Завершить пилот" (если status = active)
   - Видимость кнопок зависит от прав доступа

7. **Диалог загрузки файла:**
   - Drag & drop зона
   - Кнопка "Выбрать файл"
   - Отображение выбранного файла
   - Валидация формата и размера
   - Progress bar
   - Кнопки: "Отмена", "Загрузить"

8. **Loading и Error состояния:**
   - Skeleton loader при загрузке
   - Error message при ошибке API
   - Toast уведомления при успешной загрузке/удалении

9. **API интеграция:**
   - PilotService.getDetail(id)
   - PilotService.getArtifacts(id)
   - PilotService.uploadArtifact(id, file)
   - PilotService.deleteArtifact(id, artifactId)
   - PilotService.getRelated(id)
   - Обработка ошибок (403, 404, 500)

### Acceptance Criteria

- [ ] PilotDetailView компонент реализован
- [ ] Основная информация отображается корректно
- [ ] Блок связанных скоркарт реализован
- [ ] EntityScorecardBlock отображается корректно
- [ ] Блок артефактов реализован
- [ ] Загрузка файлов работает (drag & drop + кнопка)
- [ ] Валидация файлов работает
- [ ] Progress bar отображается при загрузке
- [ ] Удаление файлов работает
- [ ] Блок связанных сущностей реализован
- [ ] Навигация к связанным сущностям работает
- [ ] Отображение "через скоркарты" работает
- [ ] Кнопки действий по жизненному циклу отображаются
- [ ] Loading состояние (skeleton) работает
- [ ] Error состояние отображается
- [ ] Empty states отображаются
- [ ] Responsive дизайн работает
- [ ] API интеграция работает корректно
- [ ] Обработка ошибок реализована
- [ ] Unit тесты для компонента (coverage > 70%)

### Dependencies
- AN-PD1 (требуется UI спецификация)
- BE-PD1 (требуется готовый API endpoint)

---

## Итоговая зависимость задач

```
AN-PD1 (1 день)
  ↓
BE-PD1 (3 дня)
  ↓
FE-PD1 (5 дней)
```

**Общая длительность (критический путь):** 9 дней

**Параллельная работа:**
- BE-PD1 может начаться сразу после AN-PD1
- FE-PD1 может начаться только после готовности BE-PD1

---

## ✅ Ключевые особенности страницы

1. **Адаптация существующей страницы** - добавление новых блоков
2. **Блок связанных скоркарт** - многие-ко-многим связь
3. **Блок артефактов** - загрузка/удаление файлов с drag & drop
4. **Блок связанных сущностей** - отображение связей через Скоркарты
5. **Навигация к связанным сущностям** - клик → детальная страница
6. **Кнопки действий по жизненному циклу** - зависят от статуса
7. **Валидация файлов** - размер и формат
8. **Progress bar** - визуализация загрузки
9. **Empty states** - для артефактов и связей
10. **Права доступа** - ПРМ (свой продукт), Методолог, Админ
11. **Responsive дизайн** - адаптация под разные разрешения

---
